GC deprecated junit assertThat.